--- a/package.json
+++ b/package.json
@@ -7,5 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "jade": "^1.11.0",
+    "less-middleware": "^3.0.1",
+    "mongodb": "^3.1.1",
+    "mongoose": "^5.2.3"
+  }
 }
