--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "highcharts": "^6.1.1",
     "jade": "^1.11.0",
     "less-middleware": "^3.0.1",
     "mongodb": "^3.1.1",
