--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-fileupload": "^0.4.0",
+    "fast-csv": "^2.4.1",
     "highcharts": "^6.1.1",
     "jade": "^1.11.0",
+    "json2csv": "^4.1.6",
     "less-middleware": "^3.0.1",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.3"
