--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-fileupload": "^0.4.0",
+    "express-session": "^1.15.6",
     "fast-csv": "^2.4.1",
     "highcharts": "^6.1.1",
     "jade": "^1.11.0",
